--- a/Shop/Views/ApplicationType/Delete.cshtml
+++ b/Shop/Views/ApplicationType/Delete.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Shop.Models.ApplicationType
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="DeletePost">
+    <input asp-for="Id" hidden />
     <div class="borer p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Application Type</h2>
+            <h2 class="text-info pl-3">Delete Category</h2>
         </div>
 
         <div class="row">
@@ -13,16 +14,14 @@
                         <label asp-for="Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="Name" disabled class="form-control" />
                     </div>
 
                 </div>
-               
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
-
                         <div class="col">
-                           <input type="submit" class="btn btn-info w-100" value="Create" />
+                           <input type="submit" class="btn btn-danger w-100" value="Delete" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100"><i class="fa-solid fa-right-from-bracket"></i> Back</a>
@@ -36,4 +35,14 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
+}
+
+
 
