--- a/Shop/Views/ApplicationType/Edit.cshtml
+++ b/Shop/Views/ApplicationType/Edit.cshtml
@@ -1,9 +1,10 @@
-﻿@model Shop.Models.ApplicationType
+﻿@model Shop.Models.Category
 
-<form method="post" asp-action="Create">
+<form method="post">
+    <input asp-for="Id" hidden />
     <div class="borer p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Application Type</h2>
+            <h2 class="text-info pl-3">Edit Category</h2>
         </div>
 
         <div class="row">
@@ -14,15 +15,24 @@
                     </div>
                     <div class="col-8">
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                 </div>
-               
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="DisplayOrder"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="DisplayOrder" class="form-control" />
+                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                    </div>
+
+                </div>
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
-
                         <div class="col">
-                           <input type="submit" class="btn btn-info w-100" value="Create" />
+                           <input type="submit" class="btn btn-info w-100" value="Update" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100"><i class="fa-solid fa-right-from-bracket"></i> Back</a>
@@ -36,4 +46,14 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
+}
+
+
 
