--- a/Shop/Views/ApplicationType/Index.cshtml
+++ b/Shop/Views/ApplicationType/Index.cshtml
@@ -7,7 +7,7 @@
         </div>
         <div class="col-6 text-right">
             <a asp-action="Create" class="btn btn-primary">
-                Create New Application Type
+                <i class="fa-solid fa-plus"></i> Create New Application Type
             </a>
         </div>
     </div>
@@ -30,6 +30,16 @@
                {
                    <tr>
                        <td width="50%">@obj.Name</td>
+                       <td>
+                           <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="Create" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                </a>
+                                <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-1">
+                                    <i class="fa-solid fa-trash-can"></i>
+                                </a>
+                            </div>
+                       </td>
                    </tr>
                }
            </tbody>
