ДЗ: метолы Edit и Delete для ApplicationType

--- a/Shop/Views/ApplicationType/Create.cshtml
+++ b/Shop/Views/ApplicationType/Create.cshtml
@@ -2,6 +2,7 @@
 
 <form method="post" asp-action="Create">
     <div class="borer p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-info pl-3">Add Application Type</h2>
         </div>
@@ -14,6 +15,7 @@
                     </div>
                     <div class="col-8">
                         <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -37,3 +39,10 @@
     </div>
 </form>
 
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
+}
