--- a/Shop/Views/ApplicationType/Edit.cshtml
+++ b/Shop/Views/ApplicationType/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model Shop.Models.Category
+﻿@model Shop.Models.ApplicationType
 
 <form method="post">
     <input asp-for="Id" hidden />
     <div class="borer p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Edit Category</h2>
+            <h2 class="text-info pl-3">Edit Application Type</h2>
         </div>
 
         <div class="row">
@@ -16,16 +16,6 @@
                     <div class="col-8">
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-
-                </div>
-                <div class="form-group row">
-                    <div class="col-4">
-                        <label asp-for="DisplayOrder"></label>
-                    </div>
-                    <div class="col-8">
-                        <input asp-for="DisplayOrder" class="form-control" />
-                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                     </div>
 
                 </div>
