--- a/Shop/Views/ApplicationType/Index.cshtml
+++ b/Shop/Views/ApplicationType/Index.cshtml
@@ -14,7 +14,7 @@
 
     <br /><br />
 
-    @if (Model.Count() > 0)
+   @if (Model.Count() > 0)
    {
        <table class="table table-bordered table-striped" style="width:100%">
            <thead>
@@ -32,10 +32,10 @@
                        <td width="50%">@obj.Name</td>
                        <td>
                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Category" asp-action="Create" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">
+                                <a asp-controller="ApplicationType" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </a>
-                                <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-1">
+                                <a asp-controller="ApplicationType" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-1">
                                     <i class="fa-solid fa-trash-can"></i>
                                 </a>
                             </div>
@@ -47,7 +47,7 @@
    }
    else
    {
-           <p>No application type exists.</p>
+        <p>No application type exists.</p>
    }
 
 </div>
