--- a/Shop/Views/Product/Upsert.cshtml
+++ b/Shop/Views/Product/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shop.Models.Product
+﻿@model Shop.Models.ViewModels.ProductVM
 
 @{
     var title = "Create product";
@@ -6,10 +6,10 @@
 
 <form method="post" enctype="multipart/form-data">
     
-    @if (Model.Id != 0)
+    @if (Model.Product.Id != 0)
     {
         title = "Edit product";
-        <input asp-for="Id" hidden />
+            <input asp-for="Product.Id" hidden />
     }
     
     <div class="borer p-3">
@@ -21,31 +21,31 @@
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Name"></label>
+                        <label asp-for="Product.Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input asp-for="Product.Name" class="form-control" />
+                        <span asp-validation-for="Product.Name" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Price"></label>
+                        <label asp-for="Product.Price"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Price" class="form-control" />
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <input asp-for="Product.Price" class="form-control" />
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Discription"></label>
+                        <label asp-for="Product.Discription"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Discription" class="form-control" />
-                        <span asp-validation-for="Discription" class="text-danger"></span>
+                        <input asp-for="Product.Discription" class="form-control" />
+                        <span asp-validation-for="Product.Discription" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -60,13 +60,13 @@
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="CategoryId"></label>
+                        <label asp-for="Product.CategoryId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="CategoryId" asp-items="@ViewBag.CategoryDropDown" class="form-control">
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" class="form-control">
                             <option disabled selected>--Selected Category--</option>
                         </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -74,7 +74,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            @if (Model.Id != 0)
+                            @if (Model.Product.Id != 0)
                             {
                                 // update
                                 <input type="submit" class="btn btn-info w-100" value="Update" />   
