--- a/Shop/Views/Product/Delete.cshtml
+++ b/Shop/Views/Product/Delete.cshtml
@@ -40,6 +40,15 @@
 
                 <div class="form-group row">
                     <div class="col-4">
+                        <label asp-for="ApplicationTypeId"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="ApplicationType.Name" disabled class="form-control" />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-4">
                         <label asp-for="CategoryId"></label>
                     </div>
                     <div class="col-8">
