--- a/Shop/Views/Product/Index.cshtml
+++ b/Shop/Views/Product/Index.cshtml
@@ -25,14 +25,22 @@
                     <th>
                         Price
                     </th>
+                    <th>
+                        Catagory
+                    </th>
+                    <th>
+                        Application Type
+                    </th>
                 </tr>
             </thead>
             <tbody>
                  @foreach (var obj in Model)
                  {
                      <tr>
-                         <td width="50%">@obj.Name</td>
-                         <td width="30%">@obj.Price</td>
+                         <td width="30%">@obj.Name</td>
+                         <td width="10%">@obj.Price</td>
+                         <td width="20%">@obj.Category.Name</td>
+                         <td width="20%">@obj.ApplicationType.Name</td>
                          <td class="text-center">
                              <div class="w-75 btn-group" role="group">
                                    <a asp-action="Upsert" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">
